# budget_analytics_app

./: .flake8  .gitignore  README.md  docker-compose.yml  pyproject.toml  ruff.toml
backend/: Dockerfile  pyproject.toml
backend/src/backend/: __init__.py
backend/src/backend/api/: __init__.py  auth.py  entries.py  reports.py  run_backend.py
backend/src/backend/auth_app/: __init__.py  models.py  settings.py
backend/src/backend/entries_app/: __init__.py  db_engine.py  models.py  settings.py
backend/src/backend/reports_app/: __init__.py  reports_service.py  settings.py
budget_backend/: pyproject.toml
budget_backend/src/budget_backend/: auth.py  entries.py  main.py  scripts.py
budget_frontend/: pyproject.toml
budget_frontend/src/budget_frontend/: auth.py  entries.py  main.py  scripts.py
custom-logging/: pyproject.toml
custom-logging/src/custom_logging/: __init__.py  colored_formatter.py  logging_config.py  record_factory.py
custom-logging/tests/: __init__.py  test_colored_formatter.py  test_file_handler.py  test_logging_config.py  test_record_factory.py  test_stream_handler.py
custom_logging/: __init__.py  pyproject.toml
custom_logging/src/custom_logging/: __init__.py  colored_formatter.py  file_handler.py  logging_config.py  stream_handler.py
custom_logging/tests/: __init__.py  test_colored_formatter.py  test_file_handler.py  test_logging_config.py  test_record_factory.py  test_stream_handler.py
frontend/: Dockerfile  pyproject.toml
frontend/src/frontend/: __init__.py  main.py  run_frontend.py
frontend/src/frontend/api/: __init__.py  api_client.py  auth_api_client.py  entries_api_client.py  reports_api_client.py
frontend/src/frontend/apps/: __init__.py  auth.py  base_page.py
src/: __init__.py
src/api/: auth.py  entries.py  reports.py  run_backend.py
src/auth_app/: auth.py  models.py
src/backend/: __init__.py
src/backend/api/: __init__.py  auth.py  entries.py  reports.py  run_backend.py
src/backend/auth_app/: cognito_client.py  exceptions.py  settings.py
src/backend/entries_app/: budget_service.py  db_engine.py  entries.py  exceptions.py  models.py  settings.py
src/backend/reports_app/: exceptions.py  reports_generator.py  reports_service.py  s3client.py  settings.py
src/budget_analytics_app/backend/: auth.py  entries.py  run_backend.py
src/budget_analytics_app/budget_logs/: __init__.py  colored_formatter.py  file_handler.py  logging_config.py  stream_handler.py
src/budget_analytics_app/frontend/: auth.py  entries.py  run_frontend.py
src/budget_db_app/: entries.py  exceptions.py
src/custom_logging/: file_handler.py  stream_handler.py
src/frontend/: api_client.py  auth.py  auth_api_client.py  entries.py  entries_api_client.py  main.py  page_states.py  run_frontend.py
src/frontend/api/: api_client.py  auth_api_client.py  entries_api_client.py  reports_api_client.py
src/frontend/api_clients/: auth_api_client.py  entries_api_client.py  reports_api_client.py
src/frontend/apps/: auth.py  base_page.py  entries.py  page_state.py  reports.py
tests/tests_logs/: test_colored_formatter.py  test_file_handler.py  test_logging_config.py  test_record_factory.py  test_stream_handler.py
