[project]
name = "budget-analytics-app"
version = "0.1.0"
description = "A budget analytics service using FastAPI, Streamlit, and AWS."
authors = [
    {name = "AlbertFarkhutdinov", email = "albertfarhutdinov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "boto3<1.38",
    "fastapi<0.116",
    "pyjwt<2.11",
    "psycopg2-binary<2.10",
    "pydantic<2.11",
    "pydantic-settings<2.9",
    "python-dotenv<1.1",
    "requests<2.33",
    "SQLAlchemy<2.1",
    "streamlit<1.43",
    "uvicorn<0.35",
]

[dependency-groups]
dev = [
    "flake8-annotations<3.2",
    "flake8-awesome<1.4",
    "pytest<8.4",
    "pytest-cov<6.1",
    "ruff>=0.11.2",
    "wemake-python-styleguide<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
