[project]
name = "budget-backend"
version = "0.1.0"
description = "A budget analytics service using FastAPI, Streamlit, and AWS."
authors = [
    {name = "AlbertFarkhutdinov", email = "albertfarhutdinov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
packages = [{include = "budget_backend", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
boto3 = "~1.37.4"
fastapi = "~0.115.10"
pyjwt = "~2.10.1"
psycopg2-binary = "~2.9.10"
pydantic = "~2.10.6"
python-dotenv = "~1.0.1"
SQLAlchemy = "~2.0.38"
uvicorn = "~0.34.0"

[poetry.group.dev.dependencies]
flake8-annotations = "~3.1.1"
flake8-awesome = "~1.3.0"
pytest = "~8.3.4"
pytest-cov = "~6.0.0"
wemake-python-styleguide = "~1.0.0"

[tool.poetry.scripts]
start-backend = "budget_backend.scripts:start_backend"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
