[project]
name = "budget-backend"
version = "0.1.0"
description = "A budget analytics service using FastAPI, Streamlit, and AWS."
authors = [
    {name = "AlbertFarkhutdinov", email = "albertfarhutdinov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
packages = [{include = "budget_backend", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
boto3 = "~1.37"
fastapi = "~0.115"
pyjwt = "~2.10"
psycopg2-binary = "~2.9"
pydantic = "~2.10"
pydantic-settings = "~2.8"
python-dotenv = "~1.0"
SQLAlchemy = "~2.0"
uvicorn = "~0.34"
custom-logging = {path = "../custom_logging", develop = true}

[poetry.group.dev.dependencies]
flake8-annotations = "~3.1"
flake8-awesome = "~1.3"
pytest = "~8.3"
pytest-cov = "~6.0"
wemake-python-styleguide = "~1.0"

[tool.poetry.scripts]
start-backend = "budget_backend.main:start_backend"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
