[project]
name = "budget-frontend"
version = "0.1.0"
description = "A budget analytics service using FastAPI, Streamlit, and AWS."
authors = [
    {name = "AlbertFarkhutdinov", email = "albertfarhutdinov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
packages = [{include = "budget_frontend", from = "src"}]

[tool.poetry.dependencies]
streamlit = "~1.42"
requests = "~2.32"
custom-logging = {path = "../custom_logging", develop = true}

[poetry.group.dev.dependencies]
flake8-annotations = "~3.1"
flake8-awesome = "~1.3"
pytest = "~8.3"
pytest-cov = "~6.0"
wemake-python-styleguide = "~1.0"

[tool.poetry.scripts]
start-frontend = "budget_frontend.scripts:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"