[project]
name = "budget-frontend"
version = "0.1.0"
description = "A budget analytics service using FastAPI, Streamlit, and AWS."
authors = [
    {name = "AlbertFarkhutdinov", email = "albertfarhutdinov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "custom_logging<1.0",
    "requests<2.33",
    "streamlit<1.43",
]

[tool.uv.sources]
custom-logging = { path = "../custom_logging", package = true }

[tool.poetry]
packages = [{include = "budget_frontend", from = "src"}]

[dependency-groups]
dev = [
    "flake8-annotations<3.2",
    "flake8-awesome<1.4",
    "pytest<8.4",
    "pytest-cov<6.1",
    "wemake-python-styleguide<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
