[project]
name = "custom-logging"
version = "0.1.0"
description = ""
authors = [
    {name = "AlbertFarkhutdinov", email = "albertfarhutdinov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
packages = [{include = "custom_logging", from = "src"}]

[poetry.group.dev.dependencies]
flake8-annotations = "~3.1"
flake8-awesome = "~1.3"
pytest = "~8.3"
pytest-cov = "~6.0"
wemake-python-styleguide = "~1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
