[project]
name = "custom-logging"
version = "0.1.0"
description = ""
authors = [
    {name = "AlbertFarkhutdinov", email = "albertfarhutdinov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = []

[tool.poetry]
packages = [{include = "custom_logging", from = "src"}]

[dependency-groups]
dev = [
    "flake8-annotations<3.2",
    "flake8-awesome<1.4",
    "pytest<8.4",
    "pytest-cov<6.1",
    "wemake-python-styleguide<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
