[project]
name = "frontend"
version = "0.1.0"
description = "A budget analytics service using FastAPI, Streamlit, and AWS."
authors = [
    {name = "AlbertFarkhutdinov", email = "albertfarhutdinov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "custom-logging",
    "plotly<6.1",
    "python-multipart<0.1",
    "requests<2.33",
    "streamlit<1.45",
]

[tool.uv.sources]
custom-logging = { path = "../custom-logging" }

[dependency-groups]
dev = [
    "isort<6.1",
    "pytest<8.4",
    "pytest-cov<6.1",
    "ruff<0.12",
    "wemake-python-styleguide<1.2",
]

[project.scripts]
frontend = "frontend.run_frontend:start_frontend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
